fix: prevent overflow in mobile view

--- a/pages/templateEditor/index.module.scss
+++ b/pages/templateEditor/index.module.scss
@@ -3,9 +3,13 @@
 .templateEditor {
   display: grid;
   grid-template-columns: 300px auto;
+  grid-column-start: 0;
 
   @media (max-width: $xs) {
     grid-template-columns: 1fr;
+
+    display: flex;
+    flex-direction: column-reverse;
   }
 
   .sidePanel {
@@ -18,22 +22,29 @@
       width: 100%;
     }
   }
-
-  .imageContainer {
-    position: relative;
+  .editorPreview {
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    width: 100%;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 80px);
 
-    @media (max-width: $xs) {
-      height: calc(100vh - 150px);
+    @media (max-width: $md) {
+      height: auto;
     }
 
-    .productImag {
-      position: absolute;
+    .imageContainer {
+      position: relative;
+
       width: 100%;
-      top: 0;
+      max-width: 600px;
+
+      .productImag {
+        position: absolute;
+        width: 100%;
+        top: 0;
+      }
     }
   }
 }
